# DCPD

./: .agignore  .gitignore  .gitreview  ChangeLog  Doxyfile.in  Makefile.am  README.md  com_tahifi_dcpd.xml  configure.ac  cppcheck_suppressed.txt  dbus_iface.c  dbus_iface.h  dbus_iface_deep.h  dcpd.c  dcpdefs.h  dcpregs_drcp.c  dcpregs_drcp.h  de_tahifi_dcpd.xml  decode_app_url.py  drcp.c  drcp.h  drcp_command_codes.h  dynamic_buffer.c  dynamic_buffer.h  generate_update_script_header.sh  meson.build  messages.c  messages.h  named_pipe.c  named_pipe.h  network.c  network.h  os.c  os.h  registers.c  registers.h  send_dcp_command.sh  send_dcp_command_from_files.sh  send_drcp_command.sh  send_read_register.sh  (+3 more)
access_point/: Makefile  user_configures_network_settings_over_app.sdiag  user_starts_access_point_mode.sdiag
config.site/: config.RasPi  config.StrBo
debian/: changelog  control.in
scripts/: Back.sh  Down.sh  JumpToPos.sh  OK.sh  Play.sh  SkipBackward.sh  SkipForward.sh  Stop.sh  Up.sh  configure_volume_control.sh  login_logout.sh  mediaservices_fast.sh  mediaservices_slow.sh  play_app_stream.sh  query.sh  send_dcp_command.sh  send_dcp_command_from_files.sh  send_drcp_command.sh  start_access_point.sh  switch_to_language.sh  switch_to_source.sh
src/: Makefile.am  accesspoint.cc  accesspoint.hh  accesspoint_manager.cc  accesspoint_manager.hh  applink.c  applink.cc  applink.h  applink.hh  applink_variables.c  applink_variables.cc  applink_variables.h  applink_variables.hh  audiopath_minidsl.cc  audiopath_minidsl.hh  configproxy.c  configproxy.h  configuration_dcpd.cc  configuration_dcpd.h  configuration_dcpd.hh  connman.c  connman.h  connman_address.hh  connman_agent.h  connman_common.c  connman_common.h  connman_iter.c  connman_iter.h  connman_property_cache.hh  connman_scan.c  connman_scan.cc  connman_scan.h  connman_scan.hh  connman_service.cc  connman_service.hh  connman_service_list.cc  connman_service_list.hh  connman_technology_registry.cc  connman_technology_registry.hh  coverart.cc  (+175 more)
tests/: Makefile.am  cutter-1_2_4.supp  cutter-children-1_2_4.supp  cutter2junit.xslt  meson.build  mock_airable_dbus.cc  mock_airable_dbus.hh  mock_artcache_dbus.cc  mock_artcache_dbus.hh  mock_audiopath_dbus.cc  mock_audiopath_dbus.hh  mock_connman.cc  mock_connman.hh  mock_credentials_dbus.cc  mock_credentials_dbus.hh  mock_dbus_iface.cc  mock_dbus_iface.hh  mock_dcpd_dbus.cc  mock_dcpd_dbus.hh  mock_expectation.hh  mock_file_transfer_dbus.cc  mock_file_transfer_dbus.hh  mock_logind_manager_dbus.cc  mock_logind_manager_dbus.hh  mock_messages.cc  mock_messages.hh  mock_named_pipe.cc  mock_named_pipe.hh  mock_network.cc  mock_network.hh  mock_os.cc  mock_os.hh  mock_streamplayer_dbus.cc  mock_streamplayer_dbus.hh  run_test.sh.in  test_applink.cc  test_drcp_communication.cc  test_dynamic_buffer.c  test_fixpoint.cc  test_inifile.cc  (+18 more)
tests_new/: Makefile.am  meson.build  mock_connman_technology_registry.cc  mock_connman_technology_registry.hh  test_access_point.cc  test_aupal_parser.cc  test_connman_property_cache.cc  test_connman_service.cc  test_plainplayer.cc  test_registers_system_update.cc  testrunner.cc
